--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Aug 15 11:42:30 CST 2015
+#Sun Jun 05 17:02:20 CST 2016
+ndk.dir=/Users/jsonlee/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/jsonlee/Library/Android/sdk
